--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -250,7 +250,9 @@ tags:
 
 ## Прочие статьи
 
-Как готовить модуль
+[Как готовить модуль, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-1)
+
+[Как готовить модуль, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-2)
 
 Как работают «рельсы»
 
@@ -270,7 +272,7 @@ tags:
 
 ---
 
-Пока эти переводы не перенесены на этот сайт вы можете ознакомиться с многими из них на следующих сайтах:
+Пока эти переводы не все перенесены на этот сайт вы можете ознакомиться с многими из них на следующих сайтах:
 
 архиве статей со старого сайта - https://archivecyborgsandmages.wordpress.com/category/translations/translations-other/alexandrian/
 
