--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -8,6 +8,19 @@ tags:
 author: Angry GM
 ---
 
+[Представление вашего персонажа](https://cyborgsandmages.com/posts/translations/angrygm-presentation-of-your-pc)
+
+[Таро для мастеров- чайников](https://cyborgsandmages.com/posts/translations/angrygm-taro-for-dummies)
+
+[Система деятельности во время простоя Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-downtime-activities)
+
+[Четыре вещи о которых вы не слышали, которые делают энкаунтеры не отстойными](https://cyborgsandmages.com/posts/translations/angrygm-four-things-make-encounters-not-suck)
+
+[Всегда говори мне о шансах: переосмысление случайных встреч (часть 1)](https://cyborgsandmages.com/posts/translations/always-tell-me-about-chances)
+
+[Как играть в открытом мире Angry GM](https://cyborgsandmages.com/posts/translations/translate-how-to-play-open-world-angry-gm)
+
+---
 
 Пока статьи не перенесены на этот сайт вы можете просмотреть их на архивном сайте Киборгов и Чародеев:
 
