--- a/src/content/posts/translations/reactions-to-odd-gods-clerics-alexandrian-translate.mdx
+++ b/src/content/posts/translations/reactions-to-odd-gods-clerics-alexandrian-translate.mdx
@@ -3,11 +3,13 @@ title: "Впечатления от OD&D: Боги и жрецы"
 date: "2022-12-16"
 description: Перевод статьи Justin Alexander
 tags: 
-  - "alexandrian"
-  - "justin-alexander"
+  - "Alexandrian"
+  - "OD&D"
+  - "Боги"
+  - "Клерик"
   - "Перевод"
 author: Justin Alexander
-translator: Станислав Иванов
+translator: Станислав "Drakzar" Иванов
 ---
 
 [Reactions to OD&D: Gods & Clerics](https://thealexandrian.net/wordpress/45687/roleplaying-games/reactions-to-odd-gods-clerics)
