--- a/src/content/posts/articles/expert-design-homebrew-1.mdx
+++ b/src/content/posts/articles/expert-design-homebrew-1.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Expert Design - изменение алхимических метательных средств"
 date: "2023-09-13 16:00"
-desciption: "Статья про изменение механик алхимических метательных средств и рубрику Expert Design "
+description: "Статья про изменение механик алхимических метательных средств и рубрику Expert Design "
 tags: 
   - "существо"
   - "Core d20 RPG"
