--- a/src/content/singles/books.mdx
+++ b/src/content/singles/books.mdx
@@ -20,6 +20,8 @@ tags:
 
 ## OD&D
 
+[Кольчуга](https://cyborgsandmages.com/files/downloads/odd-chainmail-kolchuga-3-izdanie-2rep-rus.docx)
+
 ## AD&D 1ed
 
 ## AD&D 2ed
