--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -142,7 +142,7 @@ tags:
 
 4
 
-5
+[Тайная жизнь узлов – Часть 5: Естественность дизайна на основе узлов](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-5)
 
 ## Цикл Рулинги на практике
 
