--- a/src/content/posts/core-d20/e5e-hexcrawl.mdx
+++ b/src/content/posts/core-d20/e5e-hexcrawl.mdx
@@ -1,5 +1,6 @@
 ---
 title: "E5E – Путешествие в дикой местности – Исследование гексов"
+description: "Записанная процедура исследования гексов в пятой редакции"
 date: "2023-09-18"
 tags: 
   - "5e"
