--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-onefile.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-onefile.mdx
@@ -1,7 +1,7 @@
 ---
 title: Гекскраул Александриана по пятой редакции в одном файле
 date: 2023-09-19
-description: "Все статьи про правила по гекскраулу Александриана в одном файле"
+description: Все статьи про правила по гекскраулу Александриана в одном файле
 tags: 
   - Alexandrian
   - Советы Мастеру
