--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-mastering.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-mastering.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Дополнение к исследованию гексов: Вождение"
+title: "Дополнение к исследованию гексов\: Вождение"
 date: "2023-09-23 12:00"
 description: "Дополнение к циклу статей Александриана про гекскраул в пятой редакции D&D вождение гекскраула #alexandrian #gmtips #hexcrawl"
 tags: 
@@ -95,4 +95,3 @@ images/080522_2244_1.png
 
 (Вы можете свериться с Random GM Tip: Fistfuls of Dice ради других советов по броскам и интерпретации большого числа дайсов единовременно).
 
-Источник: <https://vk.com/@dungeonsandsuffering-dopolnenie-k-issledovaniu-geksov-vozhdenie>
