--- a/src/content/posts/translations/alexandrian-art-of-rulings-5.mdx
+++ b/src/content/posts/translations/alexandrian-art-of-rulings-5.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Art of Rulings - Глава 5: Навык и сложность"
 date: "2019-09-17 18:00"
-description: "Перевод цикла статей Джастина Александера (Александриана) про искусство вынесения суждений (рулингов) во время вождения НРИ"
+description: "Перевод цикла статей Джастина Александера (Александриана) про искусство вынесения суждений (рулингов) во время вождения НРИ - часть 5"
 tags: 
   - суждение
   - рулинг
